# relic

./: CMakeLists.txt  command  rerun.sh  run.sh
include/: sm9.h
sample/: CMakeLists.txt  common.c  common.h  sample_bn.c  sample_ecdsa.c
src/: CMakeLists.txt  sm3.c  sm9.c
src/cp/: relic_cp_ecdsa.c
src/pp/: relic_pp_dbl_k12.c  relic_pp_dbl_k2.c  relic_pp_map_k12.c
test/: CMakeLists.txt  debug.h  sm9.c  test_cp.c  test_pc.c  test_sm3.c  test_sm9.c  test_sm9_encrypt.c  test_sm9_sign  test_sm9_sign.c
