macro(ADD_SAMPLE SAMPLE)
	add_executable(sample_${SAMPLE} sample_${SAMPLE}.c common.c)
	if (STLIB)
		target_link_libraries(sample_${SAMPLE} ${RELIC_S})
	else(STLIB)
		if (SHLIB)
			target_link_libraries(sample_${SAMPLE} ${RELIC})
		endif(SHLIB)
	endif(STLIB)
endmacro(ADD_SAMPLE)

if (WITH_CP)
    ADD_SAMPLE(ecdsa)
endif(WITH_CP)